--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,9 @@ jspm_packages/
 
 # dotenv environment variables file
 .env
+.env.local
+.env.production
+.env.staging
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
